# qt_qml_weather_station

./: Aufgaben.md  CMakeLists.txt  README.md  app_settings.cpp  app_settings.h  app_settings.md  aufgaben.md  aufgaben_geocoding.md  main.cpp  main.qml  sensor.h  settings.qml  simulated_sensor.cpp  simulated_sensor.h  weather_station.cpp  weather_station.h
